modal content clipping fix

--- a/assets/style/cmps/book-details.css
+++ b/assets/style/cmps/book-details.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 15px;
     background-color: white;
 }
 
@@ -15,8 +16,8 @@
     color: var(--clr2);
 }
 .book-details img {
-    max-width: 200px;
     display: block;
+    max-width: 200px;
     margin: auto;
 }
 
@@ -27,6 +28,7 @@
     margin: auto;
     border: 1px solid black;
 }
+
 .book-details .loading {
     font-size: 2.5rem;
     animation: loader 0.5s alternate infinite linear;
@@ -34,11 +36,12 @@
 
 .book-details.modal {
     position: fixed;
+    overflow-y: auto;
+    width: 700px;
+    height: 700px;
     top:50%;
     left:50%;
     transform: translate(-50%, -50%);
-    width: 700px;
-    height: 700px;
     max-height: 80%;
     max-width: 80%;
     box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
